# pyflowml

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_magic.py
examples/: classification_example.py
pyflowml/: __init__.py  cli.py
pyflowml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pyflowml/core/: __init__.py  engine.py  optimizer.py  profiler.py
pyflowml/data/: __init__.py  cleaner.py  loader.py  memory.py  pyflowml.py
pyflowml/evaluation/: __init__.py  cross_validate.py  predictor.py  reporter.py
pyflowml/models/: __init__.py  auto.py
pyflowml/monitoring/: __init__.py  logger.py  tracker.py
pyflowml/nlp/: __init__.py  text_cleaner.py  vectorizer.py
pyflowml/preprocessing/: __init__.py  feature_selector.py  pipeline.py  scaler.py
pyflowml/tuning/: __init__.py  hypertuner.py
pyflowml/utils/: __init__.py  console.py  saver.py
pyflowml/visualization/: __init__.py  model_viz.py  plotter.py
saved_models/: Obesity_regression_model_20260415_231429.pkl  Obesity_regression_model_20260415_231429_meta.json  Obesity_regression_model_20260415_233449_meta.json  Obesity_regression_model_20260416_091636_meta.json  Obesity_regression_model_20260416_091934_meta.json  Obesity_regression_model_20260417_200634.pkl  Obesity_regression_model_20260417_200634_meta.json  Obesity_regression_model_20260417_201600_meta.json  Obesity_regression_model_20260417_203232_meta.json  ai_job_impact_classification_model_20260418_134034.pkl  ai_job_impact_classification_model_20260418_134034_meta.json  ai_job_impact_regression_model_20260416_110531.pkl  ai_job_impact_regression_model_20260416_110531_meta.json  iris_classifier_20260415_225646.pkl  iris_classifier_20260415_225646_meta.json
scripts/: README.md  __init__.py  generate_implementation_plan.py
tests/: test_all.py
