[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyflowml"
version = "1.1.0"
description = "AutoML library for the full ML lifecycle — train, evaluate, visualise, and save"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

authors = [
  {name = "PyFlowML Contributors"}
]

keywords = ["automl", "machine-learning", "sklearn", "xgboost", "automation", "data-science"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "numpy>=1.21.0",
  "pandas>=1.3.0",
  "scikit-learn>=1.0.0",
  "joblib>=1.1.0",
  "matplotlib>=3.4.0",
  "seaborn>=0.11.0",
  "psutil>=5.8.0",
  "tqdm>=4.62.0",
]

[project.optional-dependencies]
boosting = [
  "xgboost>=1.6.0",
  "lightgbm>=3.3.0",
]
nlp = ["nltk>=3.6.0"]
dask = ["dask[dataframe]>=2022.1.0"]
all = [
  "xgboost>=1.6.0",
  "lightgbm>=3.3.0",
  "nltk>=3.6.0",
  "dask[dataframe]>=2022.1.0",
]
dev = [
  "pytest>=7.0.0",
  "twine>=4.0.0",
  "build>=0.10.0",
]

[project.scripts]
pyflowml = "pyflowml.cli:main"

[project.urls]
Homepage    = "https://github.com/Abhijitdubey35/pyflowml"
Repository  = "https://github.com/Abhijitdubey35/pyflowml"
"Bug Tracker" = "https://github.com/Abhijitdubey35/pyflowml/issues"

[tool.setuptools]
# Only ship files we explicitly list below — keeps stray CSVs and other
# artifacts out of the wheel.
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["pyflowml*"]
exclude = ["tests*", "examples*", "saved_models*", "pyflowml_cache*"]

[tool.setuptools.package-data]
# Ship the typing marker so downstream type checkers honour our annotations.
pyflowml = ["py.typed"]
